--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -1,4 +1,5 @@
 {% extends 'base_auth.html' %}
+{% load static %}
 
 {% block content %}
 
@@ -15,12 +16,15 @@
                         <input type="text" name="username" id="usernameField" class="form-control form-control-sm"
                             placeholder="username" />
                     </div>
+                    <div class="invalid_feedback invalid-feedback" style="display:none">
+
+                    </div>
                     <div class="form-group">
                         <input type="email" name="email" id="emailField" class="form-control form-control-sm" placeholder="email" />
                     </div>
                     <div class="form-group">
                         <input type="password" name="password" id="passwordField" class="form-control form-control-sm" placeholder="password" /> 
-                        <small class="float-right py-2">SHOW</small>
+                        <small class="float-right">show</small>
                     </div>
                     <input type="submit" value="Register" class="btn btn-block btn-primary" />
                 </form>
@@ -30,4 +34,6 @@
 </div>
 
 <div class="col-md-4"></div>
+
+<script src="{% static 'js/register.js' %}"></script>
 {% endblock %}
