--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -17,14 +17,16 @@
                             placeholder="username" />
                     </div>
                     <div class="invalid_feedback invalid-feedback" style="display:none">
-
                     </div>
+                    <p class="text-sm text-success usernameSuccessOutput"></p>
                     <div class="form-group">
                         <input type="email" name="email" id="emailField" class="form-control form-control-sm" placeholder="email" />
                     </div>
+                    <div class="emailFeedbackArea invalid-feedback" style="display:none">
+                    </div>
                     <div class="form-group">
                         <input type="password" name="password" id="passwordField" class="form-control form-control-sm" placeholder="password" /> 
-                        <small class="float-right">show</small>
+                    <small>show</small>
                     </div>
                     <input type="submit" value="Register" class="btn btn-block btn-primary" />
                 </form>
