--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="form-group">
                         <input type="password" name="password" id="passwordField" class="form-control form-control-sm" placeholder="password" /> 
-                    <small>show</small>
+                    <small class="float-right py-3 showPasswordToggle">SHOW</small>
                     </div>
                     <input type="submit" value="Register" class="btn btn-block btn-primary" />
                 </form>
