--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -11,16 +11,17 @@
                 <div class="card-title py-3">
                     <h4>Register account</h4>
                 </div>
-                <form action="" method="post">
+                <form action="{% url 'register' %}" method="post">
+                    {% csrf_token %}
+                    {% include 'partials/_messages.html' %}
                     <div class="form-group">
-                        <input type="text" name="username" id="usernameField" class="form-control form-control-sm"
-                            placeholder="username" />
+                        <input type="text" name="username" id="usernameField" class="form-control form-control-sm" value="{{ fieldValues.email }}"  placeholder="username" />
                     </div>
                     <div class="invalid_feedback invalid-feedback" style="display:none">
                     </div>
                     <p class="text-sm text-success usernameSuccessOutput"></p>
                     <div class="form-group">
-                        <input type="email" name="email" id="emailField" class="form-control form-control-sm" placeholder="email" />
+                        <input type="email" name="email" id="emailField" value="{{ fieldValues.email }}" class="form-control form-control-sm" placeholder="email" />
                     </div>
                     <div class="emailFeedbackArea invalid-feedback" style="display:none">
                     </div>
@@ -28,7 +29,7 @@
                         <input type="password" name="password" id="passwordField" class="form-control form-control-sm" placeholder="password" /> 
                     <small class="float-right py-3 showPasswordToggle">SHOW</small>
                     </div>
-                    <input type="submit" value="Register" class="btn btn-block btn-primary" />
+                    <input type="submit" value="Register" class="btn btn-block btn-primary submit-btn" />
                 </form>
             </div>
         </div>
